styles/contact.css
.order_sidebar_main {
    height: 100vh !important;
}

.contact_page {
    display: flex;
    height: 100%;
    flex: 1;
    padding-bottom: 0px;
    overflow-x: hidden;
}

.contact_list {
    margin-top: 22.5px;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
    scrollbar-width: thin;
    padding-right: 40px;
    transition-property: all;
    transition-duration: 125ms;
}

.contact_list_container {
    min-width: 130px;
    display: flex;
    background-color: white;
    flex-direction: column;
    padding-left: 40px;
    padding-right: 0;
    box-shadow: 4px 0px 6px 0px #00000014;
    width: 430px;
    height: 100%;
    transition-property: all;
    transition-duration: 125ms;
}

.contact_btn {
    width: 100%;
    position: sticky;
    top: 22.5px;
    z-index: 5;
    display: flex;
    font-family: "latin_700";
    font-weight: 700;
    font-size: 21px;
    color: white;
    text-align: center;
    align-items: center;
    justify-content: center;
    height: 56px;
    background-color: #2a3647;
    border-radius: 10px;
    padding: 12px;
    gap: 16px;
    line-height: 120%;
    margin-top: 22.5px;
    cursor: pointer;
    justify-items: center;
}

.button_container {
    padding-right: 40px;
    display: flex
}

.contact_btn img {
    width: 32px;
    height: 32px;
}

.contact_btn:hover {
    background-color: #29ABE2;
    border: 0;
    box-shadow: 0 4px 4px #00000040;
}

.contact_btn:active {
    background-color: #091931;
}

.beginning_letter {
    position: relative;
    width: 50px;
    display: flex;
    align-items: center;
    height: 58px;
    font-size: 20px;
    line-height: 120%;
    letter-spacing: 0%;
    justify-content: left;
    left: 42px;
}

.contact_seperator {
    border-radius: 3px;
    border: 1px solid #d1d1d1;
    margin-bottom: 8px;
}

.contact_person {
    display: flex;
    flex-direction: row;
    padding-top: 16px;
    padding-bottom: 16px;
    padding-left: 28px;
    padding-right: 24px;
    gap: 35px;
    border-radius: 10px;
    cursor: pointer;
    height: 74px;
    width: 100%;
    background-color: #ffffff;
    transition-property: all;
    transition-duration: 125ms;
}

.contact_person:active {
    background-color: #2A3647;
}

.contact_person:not(.active_contact):hover {
    color: white;
    background: linear-gradient(180deg, #F9F9F9 0%, #F0F0F0 100%);
}

.initals {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 42px;
    height: 42px;
    min-width: 42px;
    min-height: 42px;
    font-size: 16px;
    border-radius: 45px;
    color: white;
    background-color: #ffa800;
    border: 2px solid white;
    font-weight: normal;
}

.initials_big {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 47px;
    width: 120px;
    height: 120px;
    aspect-ratio: 1 / 1;
    border-radius: 70px;
    color: white;
    background-color: #ffa800;
    border: 3.5px solid white;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
    transition-property: all;
    transition-duration: 125ms;
}

.small_info {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    text-align: left;
}

.small_info h3 {
    font-weight: 400;
    font-size: 20px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.small_info span {
    color: #29ABE2;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    font-weight: 400;
    font-size: 16px;
}

.contact_headline {
    display: flex;
    gap: 30px;
    padding-top: 110px;
    align-items: center;
    transition-property: position;
    transition-duration: 125ms;
}

.contact_headline h3 {
    font-size: 61px;
    line-height: 120%;
    font-weight: bold;
}

.contact_headline span {
    font-size: 27px;
}

.headline {
    display: flex;
    flex-direction: row;

    button {
        display: none;
        position: fixed;
        top: 122px;
        right: 55px;
        background-image: url('../assets/img/arrow_backwards_blue.svg');
        background-color: transparent;
        background-repeat: no-repeat;
        background-size: cover;
        width: 38px;
        height: 38px;
    }
}

.headline_seperator {
    border-right: 3px solid #29abe2;
    height: 55px;
    margin: 8px;
    transition-property: all;
    transition-duration: 125ms;
}

.contact_info {
    display: flex;
    height: 100%;
    flex-grow: 1;
    box-sizing: border-box;
    overflow: hidden;
    flex-direction: column;
    padding-left: 55px;
    gap: 32px;
}

.contact_big {
    transform: translateX(200vw);
    display: flex;
    padding-top: 32px;
    padding-right: 32px;
    gap: 54px;
    width: fit-content;
}

.name_big {
    display: flex;
    flex-direction: column;
    align-self: center;
}

.name_big span {
    font-size: 47px;
    font-weight: 500;
}

.changebtns {
    background-color: transparent;
    display: flex;
    flex-direction: row;
    gap: 30px;
    width: fit-content;
}

#changebtnsPopover {
    display: flex;
    flex-direction: row;
    gap: 30px;
    width: fit-content;
    border: 0px solid transparent;
    box-shadow: 0 4px 4px transparent;
    transition-property: all;
    transition-duration: 125ms;
}

.name_big button {
    display: flex;
    align-items: center;
    background-color: transparent;
    border: 0;
    font-size: 16px;
    font-weight: 400;
    gap: 13px;
    cursor: pointer;

    img {
        width: 24px;
        height: 24px;
    }
}

.edit_btn,
.delete_btn {
    width: 70px;
    transition: none;
}

.edit_btn:hover,
.delete_btn:hover {
    color: #29ABE2;
    font-weight: 700;
}

.edit_btn:hover img {
    filter: brightness(0) saturate(100%) invert(59%) sepia(77%) saturate(1434%) hue-rotate(165deg) brightness(92%) contrast(92%);
}

.delete_btn:hover img {
    filter: brightness(0) saturate(100%) invert(59%) sepia(77%) saturate(1434%) hue-rotate(165deg) brightness(92%) contrast(92%);
}

.contact_big_information {
    transform: translateX(200vw);

    display: flex;
    flex-direction: column;
    gap: 22px;
}

.contact_big_information span {
    font-size: 20px;
}

.contact_deep_info {
    display: flex;
    flex-direction: column;
    gap: 32px;
}

.contact_mail,
.contact_phone {
    display: flex;
    flex-direction: column;
    gap: 15px;

    span {
        font-weight: 700;
        font-size: 16px;
        line-height: 120%;
    }

    a {
        font-weight: 400;
        font-size: 16px;
        width: fit-content;
    }
}

#contact_detail_phone {
    color: black;
}

.contact_mail a {
    color: #29ABE2;
}

.active_contact {
    background-color: #2A3647;

    h3 {
        color: white;
    }
}

.slideactive {
    transform: translateX(0);
    transition: transform 0.125s ease, opacity 0.125s ease;
}

.myActiveUser {
    font-style: italic;
}

.error_text {
    position: relative;
    top: -25px;
    color: red;
    height: 12px;
    font-size: 12px;
    display: none;
}

